--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,62 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/word"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="124dp"
+        android:layout_marginEnd="56dp"
+        android:text="_ _ _ _ _ _   _ _ _ _ _"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textSize="34sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/spinWheelBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="144dp"
+        android:layout_marginEnd="173dp"
+        android:layout_marginBottom="444dp"
+        android:text="Spin the wheel"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.09"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextInputLetter"
+        android:layout_width="158dp"
+        android:layout_height="92dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="150dp"
+        android:layout_marginEnd="21dp"
+        android:layout_marginBottom="248dp"
+        android:ems="10"
+        android:inputType="text"
+        android:text="Letter"
+        android:textAlignment="center"
+        android:maxLength="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guessBtn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinWheelBtn"
+        app:layout_constraintVertical_bias="1.0"
+        android:digits="abcdefghijklmnopqrstuvwxyz"/>
+
+    <Button
+        android:id="@+id/guessBtn"
+        android:layout_width="125dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="21dp"
+        android:layout_marginEnd="110dp"
+        android:layout_marginBottom="272dp"
+        android:text="Guess"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/editTextInputLetter" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
